<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsPage" >

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/check_for_updates_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="start|center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/check_for_updates"
            android:textColor="@color/colorPrimary"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:icon="@drawable/ic_check_for_updates"
            app:iconTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/about_app_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start|center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/about_app"
            android:textColor="@color/colorPrimary"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:icon="@drawable/ic_info"
            app:iconTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donate" />

        <Button
            android:id="@+id/references_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start|center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/references"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorPrimary"
            app:icon="@drawable/ic_references"
            app:iconTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_for_updates_button" />

        <Button
            android:id="@+id/donate"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start|center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/help_fight_covid_19"
            android:textColor="@color/colorPrimary"
            app:icon="@drawable/ic_dollar"
            app:iconTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/references_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
